[package]
name = "automation"
version = "0.1.0"
edition = "2021"

[dependencies]
rtnetlink = "0.14.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
simple_logger = { version = "5.0.0", features = ["colors"] }
log = "0.4.22"
defguard_wireguard_rs = "0.4.2"
x25519-dalek = "2.0.1"
rand = "0.8.5"
